--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
 	</properties>
 
 	<dependencies>
+			<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jasper</artifactId>
+			<version>9.0.53</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
